# stock-insight-writer

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .python-version  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
output/posts/: 20260112_hdds-structural-comeback-why-2025  20260113_nutanix-ntnx-in-2026-a-compelling  20260115_nsk-ltd-npsky-quietly-positioning  20260116_paypal-pypl-in-2026-undervalued-with  20260119_duolingo-duol-at-current-levels-a  20260121_2026-the-year-zoom-zm-returns-to  20260123_servicenow-now-breaking-openai-partnership  20260127_apple-aapl-gemini-partnership-supercharges  20260127_in-2025-2026-godaddy-gddy-stands  20260203_unitedhealth-group-unh-hits-2026
output/stock-posts/: 20260112_hdds-structural-comeback-why-2025  20260113_nutanix-ntnx-in-2026-a-compelling  20260115_nsk-ltd-npsky-quietly-positioning  20260116_paypal-pypl-in-2026-undervalued-with  20260119_duolingo-duol-at-current-levels-a  20260121_2026-the-year-zoom-zm-returns-to  20260122_united-microelectronics-umc-adr-approaching  20260123_servicenow-now-breaking-openai-partnership  20260127_apple-aapl-gemini-partnership-supercharges  20260127_in-2025-2026-godaddy-gddy-stands  20260203_unitedhealth-group-unh-hits-2026
scripts/: cron-daily.sh  dry-run.sh  generate.sh  install.sh  run.sh  screen.sh  setup.sh  test.sh
src/stock_insight_writer/: __init__.py  config.py  main.py
src/stock_insight_writer/clients/: __init__.py  llm_client.py  yahoo_finance.py
src/stock_insight_writer/models/: __init__.py  (+2 more)
tests/: __init__.py  test_models.py
(+9 files in other folders)
